--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -1,3 +1,23 @@
+
+@font-face {
+	font-family: "SeoulHangang";
+	src: url("./fonts/SeoulHangangB.ttf") format('truetype');
+}
+
+@font-face {
+	font-family: "Caveat";
+	src: url("./fonts/Caveat-VariableFont_wght.ttf") format('truetype');
+}
 .home{
     width: 100%;
+	font-family: 'SeoulHangang';
+	margin-left: 1em;
+	background-color: #faf5eeef;
+}
+
+.userNameForm{
+    background-color: gray;
+    color: antiquewhite;
+    border-radius: 3px;
+    margin-left: 0.5em;
 }
